[package]
name = "arbispam"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ethers = { version = "2.0.0", features = ["rustls"] }
ethers-contract = "2.0.0"
futures = "0.3.27"
serde = "1.0.157"
tokio = "1.26.0"
